[gd_scene load_steps=10 format=3 uid="uid://dbrfr0h6vqo0g"]

[ext_resource type="Script" uid="uid://ceptogppcdn68" path="res://scripts/game.gd" id="1_4fsdi"]
[ext_resource type="PackedScene" uid="uid://mg0atayuqian" path="res://actors/player_blue.tscn" id="1_eowx7"]
[ext_resource type="PackedScene" uid="uid://bju88jl0qbt53" path="res://platforms/platform.tscn" id="2_pi054"]
[ext_resource type="Script" uid="uid://dvegm5lcc612v" path="res://scripts/player.gd" id="2_qq6sq"]
[ext_resource type="FontFile" uid="uid://dvq2o6ni8eccq" path="res://fonts/Kenney Pixel.ttf" id="5_eygnr"]
[ext_resource type="PackedScene" uid="uid://rml7e8sjjxs4" path="res://actors/enemy.tscn" id="6_cym8e"]
[ext_resource type="Script" uid="uid://bqfd6ncomoyrw" path="res://scripts/platform_cleaner.gd" id="7_gkglp"]
[ext_resource type="Texture2D" uid="uid://b4ph5c5kwudpl" path="res://assets/extras/coffee_rectangle.png" id="8_j6j3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fsdi"]
size = Vector2(180, 312)

[node name="doodle_jump" type="Node2D"]
script = ExtResource("1_4fsdi")

[node name="platform_container" type="Node2D" parent="."]

[node name="player" parent="platform_container" instance=ExtResource("1_eowx7")]
texture_filter = 1
position = Vector2(88, 210)
script = ExtResource("2_qq6sq")

[node name="platform" parent="platform_container" instance=ExtResource("2_pi054")]
position = Vector2(91, 261)
collision_mask = 6

[node name="camera" type="Camera2D" parent="platform_container"]
position = Vector2(90, 160)
limit_left = 0
limit_right = 180
limit_bottom = 320
position_smoothing_enabled = true

[node name="score" type="Label" parent="platform_container/camera"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.0
offset_top = -160.0
offset_right = 11.0
offset_bottom = -136.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("5_eygnr")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="platform_cleaner" type="Area2D" parent="platform_container/camera"]
position = Vector2(-1, 17)
collision_layer = 0
collision_mask = 7
script = ExtResource("7_gkglp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform_container/camera/platform_cleaner"]
position = Vector2(1, 288)
shape = SubResource("RectangleShape2D_4fsdi")

[node name="Sprite2D" type="Sprite2D" parent="platform_container/camera/platform_cleaner"]
position = Vector2(1, 283)
texture = ExtResource("8_j6j3j")

[node name="enemy" parent="platform_container" instance=ExtResource("6_cym8e")]
position = Vector2(123, 65)

[connection signal="body_entered" from="platform_container/camera/platform_cleaner" to="." method="_on_platform_cleaner_body_entered"]
